--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="blue_dark">#00709d</color>
     <color name="red">#FF5353</color>
     <color name="orange">#FB7813</color>
+    <color name="purple">#CC8899</color>
 
 </resources>
