--- a/app/src/release/debug/res/values-night/themes.xml
+++ b/app/src/release/debug/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.DistanceTrackerApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.DistanceTrackerApp" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue_primary</item>
         <item name="colorPrimaryVariant">@color/blue_light</item>
