--- a/app/src/main/res/layout/fragment_maps_with_tools.xml
+++ b/app/src/main/res/layout/fragment_maps_with_tools.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,7 +7,7 @@
     android:layout_height="match_parent"
     android:clipChildren="false"
     android:clipToPadding="false"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/body_full"
@@ -24,8 +23,7 @@
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            xmlns:tools="http://schemas.android.com/tools" />
+            android:layout_height="match_parent" />
 
         <ImageView
             android:id="@+id/maps_reticle"
@@ -36,16 +34,17 @@
             android:visibility="gone"
             app:tint="?android:textColorPrimary"
             tools:ignore="ContentDescription"
-            tools:visibility="visible"/>
+            tools:visibility="visible" />
 
     </com.google.android.material.card.MaterialCardView>
+
     <FrameLayout
         android:id="@+id/MainFrame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
         android:clipChildren="false"
-        android:clipToPadding="false"
-        android:animateLayoutChanges="true">
+        android:clipToPadding="false">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -289,8 +288,6 @@
                     android:textStyle="bold"
                     tools:ignore="SpUsage"
                     tools:text="PARAMS VERSION" />
-
-
 
 
             </LinearLayout>
