Implement logic and handle UI to send data from maps fragment to result fragment when stop foreground service

--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -77,7 +77,7 @@
             observeTracking="@{tracking.started}" />
 
         <Button
-            android:id="@+id/refresh_button"
+            android:id="@+id/reset_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
