--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -35,7 +35,12 @@
         tools:layout="@layout/fragment_result" >
         <action
             android:id="@+id/action_resultFragment_to_mapsFragment"
-            app:destination="@id/mapsFragment" />
+            app:destination="@id/mapsFragment"
+            app:popUpTo="@id/mapsFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="result"
+            app:argType="com.example.distancetrackerapp.model.Result" />
     </dialog>
     <fragment
         android:id="@+id/mapsFragmentWithTools"
